crates/biome_cli/tests/snapshots/main_cases_preset/customising_one_group_still_enables_recommended.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint --write --unsafe test.js
```

## `biome.json`

```json
{
  "linter": {
    "rules": {
      "style": {
        "noNegationElse": "error"
      }
    }
  }
}
```

## `test.js`

```js


```

# Emitted Messages

```block
Checked 1 file in <TIME>. Fixed 1 file.
```
