crates/biome_cli/tests/snapshots/main_cases_preset/group_preset_recommended_enables_group_rules.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint --write --unsafe test.js
```

## `biome.json`

```json
{
  "linter": {
    "rules": {
      "recommended": false,
      "suspicious": {
        "preset": "recommended"
      }
    }
  }
}
```

## `test.js`

```js


```

# Emitted Messages

```block
biome.json:2:15 deserialize  DEPRECATED  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i The use of the recommended field has been deprecated, and will removed in the next major version of Biome. Use preset instead.
  
     1 │ {
   > 2 │     "linter": {
       │               ^
   > 3 │         "rules": {
   > 4 │             "recommended": false,
   > 5 │             "suspicious": {
   > 6 │                 "preset": "recommended"
   > 7 │             }
   > 8 │         }
   > 9 │     }
       │     ^
    10 │ }
  
  i Migrate the configuration with the proper command
  
  $ biome migrate
  

```

```block
Checked 1 file in <TIME>. Fixed 1 file.
```
