crates/biome_cli/tests/snapshots/main_cases_preset/preset_all_does_not_enable_nursery_rules.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint test.js
```

## `biome.json`

```json
{
  "linter": {
    "rules": {
      "preset": "all"
    }
  }
}
```

## `test.js`

```js
export function getContext() {
    return this;
}

```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
