crates/biome_cli/tests/snapshots/main_cases_preset/preset_none_disables_all_rules.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint test.js
```

## `biome.json`

```json
{
  "linter": {
    "rules": {
      "preset": "none"
    }
  }
}
```

## `test.js`

```js
debugger;

```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
